# MyBackendCodeSample

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  commands.md  pyproject.toml
locales/en/LC_MESSAGES/: boosts.po
locales/ru/LC_MESSAGES/: boosts.po
src/: main.py  settings.py
src/api/: auth.py  dao.py  logging.py  tg_payment.py
src/api/routes/: auth_routes.py  base_routes.py  market_routes.py  stars_payment_routes.py  user_routes.py
src/api/schemas/: auth_schemas.py  base_schemas.py  market_schemas.py  stars_payment_schemas.py  user_referral_schemas.py  user_schemas.py
src/api/services/: auth_service.py  stars_payment_service.py  user_service.py
src/core/: autogenerated_models.py  database.py  dependencies.py  schemas.py  utils.py
src/core/gunicorn/: logger.py
src/core/mako_templates/: model_template.py.mako
src/core/scripts/: generate_models.py
src/others/: base64_gen.py  minioS3.py  redis_client.py  redis_queue.py
src/telegram/: bot.py  dispatcher.py  utils.py
src/telegram/handlers/: base.py  commands.py  payments.py
src/telegram/keyboards/: base.py
